AC_INIT([Transactional RDM], [0.0.0], [erik.hugne@ericsson.com], [transactional_rdm])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE(no-dist-gzip dist-bzip2)

AC_SUBST(PACKAGE_AUTHOR, ["Erik Hugne"])
AC_SUBST(PACKAGE_DESCRIPTION, ["A client/server demo how to do transactional RDM messaging"])
AC_SUBST(PACKAGE_HOMEPAGE, ["tipc.sourceforge.net"])
AC_SUBST(PACKAGE_MONTH, [$(LANG=C date '+%B')])
AC_SUBST(PACKAGE_YEAR, [$(LANG=C date '+%Y')])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_STDC_HEADERS

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
